workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/BeneficiarioGarantia__c.object-meta.xml
<CustomObject>
    <description>Registrar os beneficiários de cada pagamento de garantia. 
Objeto Detalhe do Pagamento de Garantia.</description>
    <label>Beneficiario da Garantia</label>
    <nameField>
        <displayFormat>BG-{0000}</displayFormat>
        <label>Nome de Beneficiario da Garantia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiarios da Garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>