workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/ConsultaManualSerasa__c.field-meta.xml
<CustomField>
    <fullName>ConsultaManualSerasa__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar campo caso consulte o Serasa manualmente.</inlineHelpText>
    <label>Consulta manual Serasa</label>
    <type>Checkbox</type>
</CustomField>