workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>