workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Data_programada_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_programada_do_pagamento__c</fullName>
    <label>Data programada do pagamento</label>
    <type>Date</type>
</CustomField>