workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <description>Data de nascimento do Benefiário da Garantia.</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>