workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/DataPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataPagamento__c</fullName>
    <label>Data de Pagamento</label>
    <type>DateTime</type>
</CustomField>