workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email do Beneficiário da Garantia</description>
    <formula>Conta__r.PersonEmail</formula>
    <inlineHelpText>Email do Beneficiário da Garantia</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>