workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Endereco__c.Conta__c</field>
            <operation>equals</operation>
            <valueField>$Source.Conta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_da_Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>