workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>