workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Informacao_bancaria__c.field-meta.xml
<CustomField>
    <fullName>Informacao_bancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A busca pode ser realizada por: Código do banco, nome do banco, agência e conta corrente/poupança</inlineHelpText>
    <label>Informação bancária</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Conta__c</field>
            <operation>equals</operation>
            <valueField>InformacaoBancaria__c.Conta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>