workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/InformarIndenizacao__c.field-meta.xml
<CustomField>
    <fullName>InformarIndenizacao__c</fullName>
    <inlineHelpText>Escolher a forma que deseja informar o valor de indenização a ser pago.</inlineHelpText>
    <label>Informar Indenização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor de Indenização</fullName>
            </value>
            <value>
                <fullName>% de Indenização</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>