workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Is_Integracao__c.field-meta.xml
<CustomField>
    <fullName>Is_Integracao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida se Registro é de origem integração</description>
    <label>Is Integracao</label>
    <type>Checkbox</type>
</CustomField>