workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/NomeBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>NomeBeneficiario__c</fullName>
    <description>Nome do Beneficiário da Garantia.</description>
    <label>Nome do Beneficiário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>