workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/NumeroOrdemPagamento__c.field-meta.xml
<CustomField>
    <fullName>NumeroOrdemPagamento__c</fullName>
    <label>Número da Ordem de Pagamento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>