workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>