workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Pagamento_de_garantia__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_de_garantia__c</fullName>
    <label>Pagamento de garantia</label>
    <referenceTo>PagamentoGarantia__c</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_Garantia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>