workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Pagamento_de_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_de_Sinistro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagamento de Sinistro</label>
    <referenceTo>Pagamento_de_Sinistro__c</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_da_Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>