workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Percentual_de_indenizacao__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_indenizacao__c</fullName>
    <label>% de indenização</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>