workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Permitir_Alteracao__c.field-meta.xml
<CustomField>
    <fullName>Permitir_Alteracao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo criado para ser usado em regras de validação e permitir a atualização do Beneficiário da garantia pela trigger de outros objetos.</description>
    <label>Permitir alteração</label>
    <type>Checkbox</type>
</CustomField>