workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/RelacionamentoSegurado__c.field-meta.xml
<CustomField>
    <fullName>RelacionamentoSegurado__c</fullName>
    <label>Relacionamento com o Segurado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grau_Parentesco</valueSetName>
    </valueSet>
</CustomField>