workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Requisi_o_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Requisi_o_de_Pagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requisição de Pagamento</label>
    <referenceTo>Requisicao_de_Pagamento__c</referenceTo>
    <relationshipLabel>Beneficiarios da Garantia</relationshipLabel>
    <relationshipName>Beneficiarios_da_Garantia</relationshipName>
    <type>Lookup</type>
</CustomField>