workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Aguardando pagamento</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Serviço prestado</fullName>
            </value>
            <value>
                <fullName>Serviço não prestado</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>