workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/StatusSerasa__c.field-meta.xml
<CustomField>
    <fullName>StatusSerasa__c</fullName>
    <label>Status Serasa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando atualização</fullName>
                <default>true</default>
                <label>Aguardando atualização</label>
            </value>
            <value>
                <fullName>Atualizado</fullName>
            </value>
            <value>
                <fullName>Não encontrado no Serasa</fullName>
            </value>
            <value>
                <fullName>Erro no Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>