workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/Sucursal_Destino_de_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_Destino_de_Cheque__c</fullName>
    <label>Sucursal Destino de Cheque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>