workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/valorComplementos__c.field-meta.xml
<CustomField>
    <fullName>valorComplementos__c</fullName>
    <label>Valor de complementos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>