workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/ValorIndenizacao__c.field-meta.xml
<CustomField>
    <fullName>ValorIndenizacao__c</fullName>
    <label>Valor de Indenização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>