workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/fields/ValorTotalIndenizado__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalIndenizado__c</fullName>
    <formula>ValorIndenizacao__c  +  valorComplementos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Indenizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>