workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Data_programada_do_pagamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_programada_do_pagamento</fullName>
    <active>true</active>
    <errorConditionFormula>Data_programada_do_pagamento__c &lt; (TODAY() + 2)</errorConditionFormula>
    <errorDisplayField>Data_programada_do_pagamento__c</errorDisplayField>
    <errorMessage>A data programada deve ser maior ou igual à dois dias da data atual.</errorMessage>
</ValidationRule>