workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/DiferentePendenteLiberadoNaoAlteraNd.validationRule-meta.xml
<ValidationRule>
    <fullName>DiferentePendenteLiberadoNaoAlteraNd</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(Is_Integracao__c), 			
	OR(
	AND(
	NOT(ISPICKVAL(Status__c, &quot;Pendente&quot;)), 
	NOT(ISPICKVAL(Status__c, &quot;Liberado&quot;)),
	NOT(ISCHANGED(Status__c)),
		OR(
		ISCHANGED(Conta__c ),
		ISCHANGED(Tipo_de_Pagamento__c),
		ISCHANGED(Informacao_bancaria__c),
		ISCHANGED(Sucursal_Destino_de_Cheque__c),
		ISCHANGED(RelacionamentoSegurado__c),
		
		ISCHANGED(Data_programada_do_pagamento__c)
		)
	),
	AND(
		ISCHANGED(Status__c),
		NOT(ISPICKVAL(PRIORVALUE(Status__c),&quot;Liberado&quot;)), 
		ISPICKVAL(Status__c, &quot;Aguardando pagamento&quot;),
		ISCHANGED(Data_programada_do_pagamento__c)
	)	
), Null)</errorConditionFormula>
    <errorMessage>Os Beneficiários que já estiverem com o status diferente de &quot;Pendente&quot; ou &quot;Liberado&quot; não poderão sofrer alterações. O campo &quot;Data programada de pagamento&quot; será alterado automaticamente conforme regras de negócio.</errorMessage>
</ValidationRule>