workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/LiberadoNaoAlteraContaInfBancaria.validationRule-meta.xml
<ValidationRule>
    <fullName>LiberadoNaoAlteraContaInfBancaria</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Liberado&quot;),
OR(
ISCHANGED(Informacao_bancaria__c),
ISCHANGED(Conta__c),
ISCHANGED(ConsultaManualSerasa__c) 
)
)</errorConditionFormula>
    <errorMessage>Não é possível alterar a conta, a informação bancária ou o campo &quot;Consulta Manual Serasa&quot; do beneficiário nesse status.
Por favor volte o status para Pendente para realizar essas alterações.</errorMessage>
</ValidationRule>