workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/LiberadoSomenteComTelefoneConta.validationRule-meta.xml
<ValidationRule>
    <fullName>LiberadoSomenteComTelefoneConta</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Liberado&apos;),
  Conta__r.RecordType.DeveloperName = &apos;PessoaFisica&apos;, 
  ISBLANK(Conta__r.Phone),
  ISBLANK(Conta__r.PersonContact.MobilePhone),
  ISBLANK(Conta__r.PersonContact.HomePhone),
  ISBLANK(Conta__r.Fax) 
)</errorConditionFormula>
    <errorMessage>Para a alteração do status para &quot;Liberado&quot; é necessário pelo menos um dado de telefone (Telefone Residencial, Telefone Comercial, Celular) na conta.</errorMessage>
</ValidationRule>