workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/LiberadoSomenteInfBancariaValidada.validationRule-meta.xml
<ValidationRule>
    <fullName>LiberadoSomenteInfBancariaValidada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Liberado&quot;),
NOT(ISBLANK(Informacao_bancaria__c)),
NOT(ISPICKVAL(Informacao_bancaria__r.StatusIntegracao__c, &quot;Validada&quot;))
)</errorConditionFormula>
    <errorMessage>INF.BANCÁRIA: Necessário &quot;Validar Beneficiário&quot; para alterar o status para Liberado.</errorMessage>
</ValidationRule>