workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/LiberadoSomenteSerasaAtualizado.validationRule-meta.xml
<ValidationRule>
    <fullName>LiberadoSomenteSerasaAtualizado</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Liberado&quot;),
  ConsultaManualSerasa__c == FALSE,
  NOT(ISPICKVAL(StatusSerasa__c, &quot;Atualizado&quot;))
)</errorConditionFormula>
    <errorMessage>SERASA: Necessário &quot;Validar Beneficiário&quot; para alterar o status para Liberado.
Na eventualidade de indisponibilidade do serviço do Serasa, é necessário realizar a consulta manualmente; após isso marque a o campo &quot;Consulta Manual Serasa&quot;.</errorMessage>
</ValidationRule>