workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Nao_Pode_Alterar_Status_Pago.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_Pode_Alterar_Status_Pago</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Pago&quot;) 
)</errorConditionFormula>
    <errorMessage>Não é possível voltar o Status quando o mesmo estiver &quot;Pago&quot;</errorMessage>
</ValidationRule>