workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Novo_Sempre_Pendente.validationRule-meta.xml
<ValidationRule>
    <fullName>Novo_Sempre_Pendente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(Status__c, &quot;Pendente&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Na criação de um novo beneficiário, favor informar o status como &quot;Pendente&quot;.</errorMessage>
</ValidationRule>