workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/PagoNaoPodeAlterar.validationRule-meta.xml
<ValidationRule>
    <fullName>PagoNaoPodeAlterar</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Permitir_Alteracao__c = False,
ISPICKVAL(Status__c ,&apos;Pago&apos;), 
OR( 
ISCHANGED(Conta__c), 
ISCHANGED(Percentual_de_indenizacao__c),
ISCHANGED( Informacao_bancaria__c ), 
ISCHANGED(Pagamento_de_garantia__c), 
ISCHANGED(Data_programada_do_pagamento__c),
ISCHANGED(RelacionamentoSegurado__c),
ISCHANGED(Sucursal_Destino_de_Cheque__c),
ISCHANGED(ConsultaManualSerasa__c) 
) 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Não é possível alterar informações do Beneficiário quando o mesmo está no status &quot;Pago&quot;.</errorMessage>
</ValidationRule>