workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Percentual_indenizacao_menor_igual100.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentual_indenizacao_menor_igual100</fullName>
    <active>false</active>
    <errorConditionFormula>Percentual_de_indenizacao__c &gt; 100</errorConditionFormula>
    <errorMessage>Informe um percentual menor ou igual a 100</errorMessage>
</ValidationRule>