workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Preencher_Informacao_Bancaria.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_Informacao_Bancaria</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Tipo_de_Pagamento__c , &apos;Transferencia Bancaria para Conta Corrente&apos;),
ISPICKVAL( Tipo_de_Pagamento__c , &apos;Transferencia Bancaria para Conta Poupanca&apos;)
),
ISBLANK( Informacao_bancaria__c ),
AND(
NOT(ISPICKVAL(Status__c, &quot;Pendente&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Cancelado&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Serviço prestado&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Serviço não prestado&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Informacao_bancaria__c</errorDisplayField>
    <errorMessage>Necessário preencher informação bancária</errorMessage>
</ValidationRule>