workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Preencher_se_Liberado.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_se_Liberado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;Pendente&quot;)), 
NOT(ISPICKVAL(Status__c, &quot;Cancelado&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Serviço prestado&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Serviço não prestado&quot;)),
OR(
ISBLANK(Percentual_de_indenizacao__c) 
)
)</errorConditionFormula>
    <errorMessage>Os campos &quot;Tipo de pagamento&quot; e &quot;Percentual de indenização&quot; não podem estar em branco neste status.</errorMessage>
</ValidationRule>