workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/Preencher_Sucursal.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_Sucursal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Tipo_de_Pagamento__c, &quot;Cheque&quot;),
ISBLANK( Sucursal_Destino_de_Cheque__c )
)</errorConditionFormula>
    <errorDisplayField>Sucursal_Destino_de_Cheque__c</errorDisplayField>
    <errorMessage>Obrigatório o preenchimento da Sucursal</errorMessage>
</ValidationRule>