workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/PreencherObservacaoCancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>PreencherObservacaoCancelado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Cancelado&apos;),
  ISBLANK( Observacao__c )
)</errorConditionFormula>
    <errorMessage>É obrigatório o preenchimento do campo &quot;Observação&quot; quando o status do beneficiário da garantia for &quot;Cancelado&quot;.</errorMessage>
</ValidationRule>