workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/ValidarDataProgramadaPagCoorJud.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDataProgramadaPagCoorJud</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    AND(
      ISPICKVAL(Status__c, &apos;Liberado&apos;),
      $Profile.Name = &apos;Coordenador&apos;,
      Pagamento_de_garantia__r.Caso__r.Sinistro_Judicial__c = false,
      Data_programada_do_pagamento__c &lt; TODAY()
    ),
    AND(
      ISPICKVAL(Status__c, &apos;Liberado&apos;),
      $Profile.Name = &apos;Coordenador&apos;,
      Pagamento_de_garantia__r.Caso__r.Sinistro_Judicial__c = true,
      Data_programada_do_pagamento__c &lt; TODAY()
    ),
    AND(
      ISPICKVAL(Status__c, &apos;Liberado&apos;),
      NOT($Profile.Name = &apos;Coordenador&apos;),
      Pagamento_de_garantia__r.Caso__r.Sinistro_Judicial__c = true,
      Data_programada_do_pagamento__c &lt; TODAY()
    )
  ),
  NOT($Setup.Bypass_RV__c.Ativo__c)
)</errorConditionFormula>
    <errorDisplayField>Data_programada_do_pagamento__c</errorDisplayField>
    <errorMessage>Data Programada de pagamento deve ser maior que a data atual.</errorMessage>
</ValidationRule>