workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/validationRules/ValidarDataProgramadaPagMais2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDataProgramadaPagMais2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Liberado&apos;),
  NOT($Setup.Bypass_RV__c.Ativo__c),
  NOT($Profile.Name = &apos;Coordenador&apos;),
  Pagamento_de_garantia__r.Caso__r.Sinistro_Judicial__c = false,
  Data_programada_do_pagamento__c  &lt; (today()+2),
  NOT(ISCHANGED(StatusSerasa__c))
)</errorConditionFormula>
    <errorDisplayField>Data_programada_do_pagamento__c</errorDisplayField>
    <errorMessage>Data programada de pagamento deve ser D+2</errorMessage>
</ValidationRule>