workspace-sf/force-app/main/default/objects/BeneficiarioGarantia__c/listViews/PAGOS.listView-meta.xml
<ListView>
    <fullName>PAGOS</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>PAGOS</label>
</ListView>